correcion largo de paginas - imagenes - SEO

--- a/scss/_secciones/_responsive.scss
+++ b/scss/_secciones/_responsive.scss
@@ -21,5 +21,10 @@
         "nav-area" 
         "main";
     }
-    
+    @media screen and (max-width: 450px ) {
+        .body img{
+            max-width: 80%;
+        
+        }
+    }
   }
