--- a/scss/main.css
+++ b/scss/main.css
@@ -90,6 +90,7 @@
 
 .footer {
   grid-area: footer;
+  background-size: 80%;
 }
 
 .nav-area {
@@ -98,6 +99,7 @@
 }
 
 .main {
+  height: 1000px;
   border: solid;
   padding: 20px;
 }
@@ -105,7 +107,8 @@
 .main-h5 {
   border-top: 40px;
   background-color: bisque;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
 }
 
 main a {
